test-cases/error/parse-failure.golden/error.ansi
[31mError:[0m found 'T' expected transaction, directive, or end of input
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m ../test-cases/error/parse-failure.beancount:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31mT[0m[38;5;249mh[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mo[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249mB[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249mc[0m[38;5;249mo[0m[38;5;249mu[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249me[0m[38;5;249mx[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249mc[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mp[0m[38;5;249mr[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mm[0m[38;5;249ms[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249ms[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m.[0m
 [38;5;240m  │[0m [31m┬[0m  
 [38;5;240m  │[0m [31m╰[0m[31m─[0m[31m─[0m found 'T' expected transaction, directive, or end of input
[38;5;246m───╯[0m

